[tool.poetry]
name = "tkup"
version = "1.2.0"
description = "Hierarchical Tkinter wrapper"
license = "MIT"
authors = ["Matthew T. Kennerly <mtkennerly@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mtkennerly/tkup"
keywords = ["gui", "wrapper", "tkinter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: User Interfaces"
]

[tool.poetry.dependencies]
python = ">=3.5"

[tool.poetry.dev-dependencies]
pytest = "^3.5"
pre-commit = "^1.18"
tox = "^3.7"
black = { version = "^19.3b0", allow-prereleases = true, python = "^3.6" }
flake8 = "^3.7"
mypy = "^0.730.0"
pep8-naming = "^0.8.2"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
