[tool.poetry]
name = "tkup"
version = "1.2.0"
description = "Hierarchical Tkinter wrapper"
license = "MIT"
authors = ["Matthew T. Kennerly <mtkennerly@gmail.com>"]
readme = "README.md"
repository = "https://github.com/mtkennerly/tkup"
keywords = ["gui", "wrapper", "tkinter"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: User Interfaces"
]

[tool.poetry.dependencies]
python = ">=3.5"

[tool.poetry.group.dev.dependencies]
pytest = {version = "^8.1.1", python = ">=3.8"}
mypy = {version = "^1.9.0", python = ">=3.8"}
ruff = {version = "^0.3.3", python = ">=3.8"}
pre-commit = {version = "^3.6.2", python = ">=3.9"}

[[tool.mypy.overrides]]
module = "tkup._widgets"
ignore_errors = true

[tool.ruff]
line-length = 100
lint.extend-select = ["W605", "N"]
target-version = "py38"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
